--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    
+    <link href="http://fonts.googleapis.com/css?family=Raleway:400,200,700" rel="stylesheet" type="text/css">
+    <link href="https://dl-web.dropbox.com/get/FONTS/Chalet/ChaleParNinEig.otf?" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body ng-controller="mainCtrl">
     <div class="main-container">
-      <h1> DevMountain Chat Room </h1>
+      <div class="chat-header"></div>
+      <h1></h1>
       <form ng-submit="postData()">
-        <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
-        <input placeholder="Filter" class="filter" ng-model="filterMsg"
+        <input id="messageSubmit" class="form-control text-box" type="text" ng-model="message" placeholder="Message">
+        <input id="messageSubmit" class="form-control text-box" placeholder="Filter" class="filter" ng-model="filterMsg"
       </form>
       <div class="messages-container">
+        
         <p ng-repeat="message in messages | filter: filterMsg"> message: {{message.text}} <span class="badge">{{timeStamp(message.createdAt)}}</span>
         </p>
 
