--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <input id="messageSubmit" class="form-control text-box" placeholder="Filter" class="filter" ng-model="filterMsg"
       </form>
       <div class="messages-container">
-        
+        <div class="messages-top">PLEASE leave a Message for our DevMountain students</div>  
         <p ng-repeat="message in messages | filter: filterMsg"> message: {{message.text}} <span class="badge">{{timeStamp(message.createdAt)}}</span>
         </p>
 
       </div>
+      <div class="chat-footer"><a href="http://www.mikkiplattblog.com">Visit my Website</a></div>
     </div>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
